--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "ngx-owl-carousel-o": "14.0.0",
+    "jquery": "3.6.3",
+    "font-awesome": "4.7.0",
+    "bootstrap": "4.5.3"
   }
 }
